<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_title_gamification">

        <SwitchPreferenceCompat
            app:key="pref_key_gameify"
            app:title="@string/pref_title_gameify"
            app:summaryOn="@string/pref_summary_gameify_on"
            app:summaryOff="@string/pref_summary_gameify_off"
            app:defaultValue="true" />

    </PreferenceCategory>



    <PreferenceCategory app:title="Appearance">

        <ListPreference
            app:key="pref_key_text_size"
            app:title="@string/pref_title_text_size"
            app:summary="%s"
            app:entries="@array/text_size_entries"
            app:entryValues="@array/text_size_values"
            app:defaultValue="small" />

        <Preference
            android:key="pref_key_set_background_color"
            android:title="@string/pref_title_set_background_color"
            android:summary="@string/pref_summary_set_background_color"/>

        <Preference
            android:key="pref_key_choose_background"
            android:title="Choose background image"
            android:summary="Select a custom image from your device"/>

        <Preference
            android:key="pref_key_reset_background"
            android:title="@string/pref_title_reset_background"
            android:summary="@string/pref_summary_reset_background"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Data Management">

        <Preference
            android:key="pref_key_reset_score"
            android:title="Reset high score"
            android:summary="Resets the all-time high score to 0"/>

        <Preference
            android:key="pref_key_clear_history"
            android:title="Clear card history"
            android:summary="Permanently deletes all saved card scans"/>

    </PreferenceCategory>

</PreferenceScreen>
